syntax = "proto2";

package grpc_service;

message GetJsonReply { //Get方法应答结果

  required string result = 1;

}

message SubscribeReply { //订阅结果

  required string result = 1;

}

message ConfigReply { //配置结果

  required string result = 1;

}

message ReportEvent { //订阅事件结果定义

  required string token_id = 1; //登录token_id

  required string stream_name = 2; //订阅的事件流名称

  required string event_name = 3; //订阅的事件名

  required string json_text = 4; //订阅结果json字符串

}

message GetReportRequest{ //获取事件订阅结果请求

  required string token_id = 1; //登录成功后的token_id

}

message LoginRequest {  //登录请求参数定义

  required string user_name = 1; //登录请求用户名

  required string password = 2; //登录请求密码

}

message LoginReply {  //登录请求应答定义

  required string token_id = 1; //登录成功后返回的token_id

}

message LogoutRequest { //退出登录请求参数定义

  required string token_id = 1; //token_id

}

message LogoutReply { //退出登录返回结果定义

  required string result = 1; //退出登录结果

}

message SubscribeRequest { //定义事件流名称

  required string stream_name = 1;

}

message CliConfigArgs { //向设备下发配置命令，并指定命令行参数

  required int64 ReqId = 1; //配置命令请求ID

  required string cli = 2;  //配置命令

}

message CliConfigReply { //设备返回配置命令行执行的结果

  required int64 ResReqId = 1; //返回配置命令请求ID，与CliConfigArgs相对应

  required string output = 2;    //返回配置命令执行输出

  required string errors = 3;  //标记配置命令执行结果

}

message DisplayCmdArgs { //向设备下发display命令，并指定命令行参数

  required int64 ReqId = 1; //display命令请求ID

  required string cli = 2;  //display命令

}

message DisplayCmdReply { //设备返回display命令行执行的结果

  required int64 ResReqId =1;  //display命令请求ID，与DisplayCmdArgs相对应

  required string output = 2;  //返回display命令执行输出

  required string errors = 3;  //标记display命令执行结果

}

service GrpcService { //定义gRPC方法

  rpc Login (LoginRequest) returns (LoginReply) {}  //登录方法

  rpc Logout (LogoutRequest) returns (LogoutReply) {} //退出登录方法

  rpc SubscribeByStreamName (SubscribeRequest) returns (SubscribeReply) {} //订阅事件流

  rpc GetEventReport (GetReportRequest) returns (stream ReportEvent) {} //获取事件结果

  rpc CliConfig (CliConfigArgs)  returns (stream CliConfigReply) {} //gRPC支持通过命令行下发配置命令，并返回执行结果

  rpc DisplayCmdTextOutput(DisplayCmdArgs)  returns(stream DisplayCmdReply) {} //gRPC支持通过命令行下发display命令，并返回查询结果

}